<package>
  <name>dual_manipulation_state_manager</name>
  <version>0.8.4</version>
  <description>
     Dual Manipulation state manager
  </description>
  <maintainer email="mirko.ferrati@gmail.com">Mirko Ferrati</maintainer>
  <license>BSD</license>

  <author>Mirko Ferrati</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>dual_manipulation_shared</build_depend>
  <build_depend>dual_manipulation_ik_control_ik_check</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>dual_manipulation_shared</run_depend>
  <run_depend>dual_manipulation_ik_control_ik_check</run_depend>
</package>
