<package>
  <name>dual_manipulation_state_manager</name>
  <version>0.8.4</version>
  <description>
     Dual Manipulation state manager
  </description>
  <maintainer email="mirko.ferrati@gmail.com">Mirko Ferrati</maintainer>
  <license>BSD</license>

  <author>Mirko Ferrati</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>dual_manipulation_shared</build_depend>
  <build_depend>dual_manipulation_planner</build_depend>
  <build_depend>dual_manipulation_ik_control</build_depend>
  <build_depend>lemon_ros</build_depend>
  <build_depend>simple_chain_ik</build_depend>
  <build_depend>pacman_vision_comm</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>lemon_ros</run_depend>
  <run_depend>dual_manipulation_shared</run_depend>
  <run_depend>dual_manipulation_planner</run_depend>
  <run_depend>dual_manipulation_ik_control</run_depend>
  <run_depend>simple_chain_ik</run_depend>
  <run_depend>pacman_vision_comm</run_depend>
</package>
